tests/ui/annotate-snippet/missing-type.stderr
error[E0412]: cannot find type `Iter`
  --> $DIR/missing-type.rs:5:12
   |
LL |     let x: Iter;
   |            ^^^^ not found in this scope
   |
